# zephyr-debugprobe

./: CMakeLists.txt  Kconfig  LICENSE  README.md  flash-probe.sh  prj.conf  west.yml
.github/workflows/: build.yml
boards/: ek_ra4m2.conf  ek_ra4m2.overlay  native_sim.conf  native_sim.overlay  native_sim_native_64.conf  native_sim_native_64.overlay  rpi_debug_probe.conf  rpi_debug_probe.overlay  rpi_pico.conf  rpi_pico.overlay  rpi_pico2_rp2350a_m33.conf  rpi_pico2_rp2350a_m33.overlay  rpi_pico2_rp2350a_m33_w.conf  rpi_pico2_rp2350a_m33_w.overlay  rpi_pico_rp2040_w.conf  rpi_pico_rp2040_w.overlay
cmake/: pioasm.cmake
dts/bindings/: debugprobe-swd.yaml
include/: DAP_config.h  autobaud.h  board_debug_probe_config.h  board_example_config.h  board_pico_config.h  cdc_uart.h  dap.h  get_serial.h  led.h  pio_swd.h  probe.h  probe_config.h  swdio.h  swo.h  usb_dap.h  usbd_init.h  watchdog.h
src/: autobaud.c  cdc_uart.c  dap.c  dap_vendor.c  debugprobe_usbd.c  get_serial.c  led.c  main.c  pio_swd.c  probe.c  swdio.c  swo.c  usbd_dap.c  watchdog.c
src/pio/: probe.pio  probe_oen.pio
